# config-manager

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: environments.yml
deploy/: docker-compose.yml
deploy/kubernetes/: README.md  configmap.yml  deployment.yml  etcd-service.yml  etcd-statefulset.yml  ingress.yml  namespace.yml  secret.yml  service.yml
docs/: api.md
examples/: basic_usage.py  template_usage.py
scripts/: backup_configs.py  generate_api_key.py
src/config_system/: __init__.py  api.py  auth.py  backup.py  cli.py  config_manager.py  encryption.py  logging.py  metrics.py  models.py  storage.py  templates.py  validation.py
tests/: conftest.py  test_storage.py  test_templates.py
tests/integration/: test_api.py
