[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config-manager"
version = "1.0.0"
dependencies = [
    "fastapi",
    "etcd3",
    "docker",
    "jinja2",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "PyJWT"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:starlette.*"
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"


[tool.hatch.build.targets.wheel]
packages = ["src/config_system"]
